# nautilus-custom-terminal

./: Cargo.toml  README.md  install.sh
src/: config.rs  custom_terminal_menu_provider.rs  lib.rs  open_terminal.rs  utils.rs
