[package]
name = "nautilus-custom-terminal"
version = "0.1.0"
authors = ["Edwin Svensson <nct@olback.net>"]
edition = "2018"

[lib]
crate-type = [ "dylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nautilus-extension = "0.5"
nautilus-extension = { path = "../nautilus-extension-rs/nautilus-extension" }
gobject-sys = "0.9"
glib-sys = "0.9"
gtk-sys = "0.9"
libc = "0.2"
dirs = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
percent-encoding = "2.1"
lazy_static = "1.4"
